sf-metadata/force-app/main/default/objects/Contact/fields/AI_SO_Assessed_Date__c.field-meta.xml
<CustomField>
    <fullName>AI_SO_Assessed_Date__c</fullName>
    <label>AI SO Assessed Date</label>
    <description>When Claude last assessed this student's SO status. Auto-populated.</description>
    <type>DateTime</type>
</CustomField>