sf-metadata/force-app/main/default/objects/Contact/fields/AI_SO_Assessment__c.field-meta.xml
<CustomField>
    <fullName>AI_SO_Assessment__c</fullName>
    <label>AI SO Assessment</label>
    <description>Claude AI's structured assessment of whether this student was correctly marked as 'Became Shomer Shabbos through Souled'. Auto-populated by the Souled AI Assessment service.</description>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>