sf-metadata/force-app/main/default/objects/Contact/fields/AI_SO_Verdict__c.field-meta.xml
<CustomField>
    <fullName>AI_SO_Verdict__c</fullName>
    <label>AI SO Verdict</label>
    <description>Claude's overall verdict on the SO 'Became' label. Auto-populated.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Likely Genuine</fullName>
                </value>
                <value>
                    <fullName>Needs Review</fullName>
                </value>
                <value>
                    <fullName>Unlikely</fullName>
                </value>
                <value>
                    <fullName>Insufficient Data</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>