sf-metadata/force-app/main/default/objects/Contact/fields/AI_STAM_Assessed_Date__c.field-meta.xml
<CustomField>
    <fullName>AI_STAM_Assessed_Date__c</fullName>
    <label>AI STAM Assessed Date</label>
    <description>When Claude last assessed this student's STAM status. Auto-populated.</description>
    <type>Date</type>
</CustomField>