sf-metadata/force-app/main/default/objects/Contact/fields/AI_STAM_Assessment__c.field-meta.xml
<CustomField>
    <fullName>AI_STAM_Assessment__c</fullName>
    <label>AI STAM Assessment</label>
    <description>Claude AI's structured assessment of whether this student was correctly marked as 'Became STAM (Shomer Torah and Mitzvos) through Souled'. Auto-populated.</description>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>