sf-metadata/force-app/main/default/objects/Contact/fields/AI_STAM_Confidence__c.field-meta.xml
<CustomField>
    <fullName>AI_STAM_Confidence__c</fullName>
    <label>AI STAM Confidence</label>
    <description>Claude's confidence in the STAM verdict (0-100). Auto-populated.</description>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>