sf-metadata/force-app/main/default/objects/Contact/fields/SO_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>SO_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SO Confirmed</label>
    <description>Coach manager confirms that this student legitimately 'Became' Shomer Shabbos through Souled. Unchecked = pending review.</description>
    <type>Checkbox</type>
</CustomField>