sf-metadata/force-app/main/default/objects/Contact/fields/SO_Confirmed_By__c.field-meta.xml
<CustomField>
    <fullName>SO_Confirmed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SO Confirmed By</label>
    <description>User who checked the SO Confirmed box. Auto-set by Flow.</description>
    <referenceTo>User</referenceTo>
    <relationshipLabel>SO Confirmed By Contacts</relationshipLabel>
    <relationshipName>SO_Confirmed_By_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>