sf-metadata/force-app/main/default/objects/Contact/fields/SO_Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>SO_Confirmed_Date__c</fullName>
    <label>SO Confirmed Date</label>
    <description>When SO Confirmed was checked. Auto-set by Flow.</description>
    <type>DateTime</type>
</CustomField>