sf-metadata/force-app/main/default/objects/Contact/fields/STAM_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>STAM_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>STAM Confirmed</label>
    <description>Coach manager confirms that this student legitimately 'Became' STAM through Souled. Unchecked = pending review.</description>
    <type>Checkbox</type>
</CustomField>