sf-metadata/force-app/main/default/objects/Contact/fields/STAM_Confirmed_By__c.field-meta.xml
<CustomField>
    <fullName>STAM_Confirmed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>STAM Confirmed By</label>
    <description>User who checked the STAM Confirmed box. Auto-set by Flow.</description>
    <referenceTo>User</referenceTo>
    <relationshipLabel>STAM Confirmed By Contacts</relationshipLabel>
    <relationshipName>STAM_Confirmed_By_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>