sf-metadata/force-app/main/default/objects/Contact/fields/STAM_Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>STAM_Confirmed_Date__c</fullName>
    <label>STAM Confirmed Date</label>
    <description>When STAM Confirmed was checked. Auto-set by Flow.</description>
    <type>DateTime</type>
</CustomField>