sf-metadata/force-app/main/default/objects/Contact/listViews/SO_Unconfirmed_Assessments.listView-meta.xml
<ListView>
    <fullName>SO_Unconfirmed_Assessments</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>AI_SO_Verdict__c</columns>
    <columns>AI_SO_Confidence__c</columns>
    <columns>AI_SO_Assessment__c</columns>
    <columns>SO_Confirmed__c</columns>
    <columns>AI_SO_Assessed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AI_SO_Verdict__c</field>
        <operation>notEqual</operation>
        <value></value>
    </filters>
    <filters>
        <field>SO_Confirmed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>SO Unconfirmed Assessments</label>
    <sharedTo>
        <allInternalUsers>allInternalUsers</allInternalUsers>
    </sharedTo>
</ListView>