sf-metadata/force-app/main/default/objects/Contact/listViews/STAM_Unconfirmed_Assessments.listView-meta.xml
<ListView>
    <fullName>STAM_Unconfirmed_Assessments</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>AI_STAM_Verdict__c</columns>
    <columns>AI_STAM_Confidence__c</columns>
    <columns>AI_STAM_Assessment__c</columns>
    <columns>STAM_Confirmed__c</columns>
    <columns>AI_STAM_Assessed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AI_STAM_Verdict__c</field>
        <operation>notEqual</operation>
        <value></value>
    </filters>
    <filters>
        <field>STAM_Confirmed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>STAM Unconfirmed Assessments</label>
    <sharedTo>
        <allInternalUsers>allInternalUsers</allInternalUsers>
    </sharedTo>
</ListView>